@@ -693,6 +693,16 @@ expressions</description>
     in the pool the Apache will return <code>SERVER_BUSY</code> status to
     the client.
     </td></tr>
+    <tr><td>disablereuse</td>
+        <td>Off</td>
+        <td>This parameter should be used when you want to force mod_proxy
+    to immediately close a connection to the backend after being used, and
+    thus, disable its persistant connection and pool for that backend.
+    This helps in various situations where a firewall between Apache and
+    the backend server (irregardless of protocol) tends to silently
+    drop connections. To prevent mod_proxy from reusing the backend connection,
+    set this property value to <code>On</code>. 
+    </td></tr>
     <tr><td>flushpackets</td>
         <td>off</td>
         <td>Determines whether the proxy module will auto-flush the output
